# forge_base

./: .gitignore  .import-linter  .ruff.toml  AGENT_ECOSYSTEM.md  AI_AGENT_QUICK_START.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  QUICKSTART.md  README.md  USER_PROMPT_BASE.md  VERSION.MD  devtool.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_docs_access.py
.claude/: README.md  forgebase_instructions.md
agents/: bill_review.md  jorge_theforge.md
docs/: AI_AGENT_DISCOVERY.md  AI_DISCOVERY_LAYERS.md  BACKLOG.md  DOCUMENTATION_ACCESS.md  FORGE_PROCESS.md  ForgePulse_PROPOSAL.md  PULSE_PROJECT.md  README.md  cookbook.md  getting-started.md  testing-guide.md
docs/adr/: 001-clean-architecture-choice.md  002-hexagonal-ports-adapters.md  003-observability-first.md  004-cognitive-testing.md  005-dependency-injection.md  006-forgeprocess-integration.md  007-opentelemetry-integration.md  008-forgepulse-cl-ce.md
docs/ai-agents/: complete-guide.md  discovery.md  ecosystem.md  quick-start.md
docs/guides/: forgebase_guide.md
docs/reference/: architecture.md  documentation-access.md  forge-process-visual.md  forge-process.md
docs/referencia/: acesso-documentacao.md  arquitetura.md  documentation_guide.md  forge-process-visual.md  forge-process.md
docs/symbiotes/: fbase_auditor.md  fbase_feature.md
docs/users/: cli-first.md  composition-guide.md  environment-and-scripts.md  forgebase-derived-apps.md  forgebase-rules.md  pulse_cookbook.md  pulse_quick_start.md  quick-start.md  recipes.md  testing-guide.md
docs/usuarios/: apps-derivados-forgebase.md  pulse_cookbook.md  pulse_quick_start.md
examples/: README.md  __init__.py  ai_agent_usage.py  claude_api_integration.py  complete_flow.py  integration_demo.py
examples/user_management/: __init__.py
examples/user_management/application/: __init__.py  create_user_usecase.py  ports.py
examples/user_management/domain/: __init__.py  email.py  user.py
examples/user_management/infrastructure/: __init__.py  user_repository.py
scripts/: check-architecture.sh  check-deps.sh  discover.py  install_precommit.sh  lint.sh  mypy.ini  pre-commit-config.yaml  ruff.toml  scaffold.py  sync_docs.sh  typecheck.sh
scripts/templates/: adapter_template.txt  port_template.txt  usecase_template.txt
src/forge_base/: __init__.py  core_init.py
src/forge_base/_docs/: AI_AGENT_QUICK_START.md  README.md  __init__.py
src/forge_base/adapters/: __init__.py  adapter_base.py
src/forge_base/application/: __init__.py  dto_base.py  error_handling.py  port_base.py  usecase_base.py
src/forge_base/composition/: __init__.py  build_context.py  build_spec.py  builder.py  plugin_registry.py  protocols.py
src/forge_base/dev/: __init__.py
src/forge_base/domain/: __init__.py  entity_base.py  exceptions.py
src/forge_base/integration/: __init__.py  intent_tracker.py  yaml_sync.py
src/forge_base/observability/: log_service.py
src/forge_base/pulse/: __init__.py  _version.py  basic_collector.py  budget.py  buffer.py  collector.py  context.py  dashboard.py  ecm.py  exceptions.py  export_pipeline.py  exporters.py  field_names.py  heuristic.py  level.py  meta.py  policy.py  protocols.py  redaction.py  report.py  runner.py  span.py  spec_schema.py  support_tracks.py  value_tracks.py
src/forge_base/testing/: __init__.py  forge_test_case.py
src/forgebase/: __init__.py  core_init.py
src/forgebase/_docs/: AI_AGENT_QUICK_START.md  README.md
src/forgebase/adapters/: __init__.py  adapter_base.py
src/forgebase/application/: __init__.py  dto_base.py  error_handling.py  port_base.py  usecase_base.py
src/forgebase/dev/: AI_AGENTS.md  __init__.py
src/forgebase/domain/: __init__.py  entity_base.py  exceptions.py  value_object_base.py
src/forgebase/integration/: __init__.py  yaml_sync.py
src/forgebase/observability/: feedback_manager.py  log_service.py  tracer_port.py  track_metrics.py
src/forgebase/testing/: __init__.py  forge_test_case.py
tests/benchmarks/: test_basic_overhead.py  test_policy_overhead.py  test_pulse_overhead.py  test_span_overhead.py
tests/contract_tests/: __init__.py  repository_contract.py
tests/integration/pulse/: test_runner_basic.py  test_runner_levels.py  test_runner_with_meta.py  test_runner_with_policy.py  test_runner_with_spans.py  test_runner_with_spec.py  test_runner_with_support_tracks.py
tests/property_based/: __init__.py  test_entity_properties.py  test_sampling_properties.py  test_value_object_properties.py
tests/unit/composition/: __init__.py  test_build_context.py  test_build_spec.py  test_builder.py  test_plugin_registry.py  test_protocols.py
tests/unit/core/: __init__.py  test_core_init.py
tests/unit/domain/: test_entity_base.py
tests/unit/infrastructure/: test_json_repository.py  test_repository_base.py  test_sandbox.py  test_sql_repository.py
tests/unit/integration/: __init__.py  test_intent_tracker.py
tickets/: 2025-11-03-autonomia-coding-agents-plano-extensivo.md  2025-11-03-implementacao-tipagem-forte-mypy.md  APROVACAO-2025-11-03-autonomia-coding-agents.md  REVIEW-2025-11-03-autonomia-coding-agents.md
tíquets/: 2025-11-03-linter-ruff-e-pre-commit.md
(+76 files in other folders)
